--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -63,13 +63,14 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<input class="savedata" type="text" value='' id="consultantsid" name="consultantsid">
 			<div class="listBlue mui-scroll">
 				<ul class="mui-table-view mui-table-view-chevron" id="staReleList">
                         
                 </ul>
 			</div>
 		</div>
-		<input type="hidden" name="consultantsid" id="consultantsid" value="" />
+		
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
