--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
@@ -23,7 +23,7 @@
 						<div class="input_div" style="display: none;">
 							
 						</div>
-						<input class="savedata" type="hidden" value='' id="sd">
+						<input class="savedata" type="hidden" value=''>
 						<div style="clear:both"></div>
 					</div>
 				</div>
@@ -36,6 +36,7 @@
 		<div class="SearchBtnClass">
 			<button id="staRelSerhBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
 		</div>
+		<!--<input class="savedata" type="text" value='' id="hideul" name="hideul">-->
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
