--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -63,7 +63,7 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
-			<input class="savedata" type="text" value='' id="consultantsid" name="consultantsid">
+			<!--<input class="savedata" type="text" value='' id="consultantsid" name="consultantsid">-->
 			<div class="listBlue mui-scroll">
 				<ul class="mui-table-view mui-table-view-chevron" id="staReleList">
                         
