--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -19,23 +19,10 @@
 			<p class="app_cf app_nav_text_center">经销店添加</p>
 		</header>
 		<div class="mui-content mui-input-group">
-			<!--<div class="mui-input-row">
-				<label>经销店名称：</label>
-				<div class="pre">
-					<input class="newinput" type="text" placeholder="请选择经销店">
-					<font>*</font>
-					<span class="mui-icon mui-icon-closeempty hideSpan" id="cpyAddHideSpan"></span>
-					<div class="input_div" style="display: none;">
-
-					</div>
-					<input class="savedata" type="hidden" value=''>
-					<div style="clear:both"></div>
-				</div>
-			</div>-->
 			<div class="mui-input-row">
-				<label>客户专员：</label>
+				<label>采购中心：</label>
 				<div class="pre">
-					<select class="secStyle" name="" id="input_div_business">
+					<select class="secStyle" name="" id="officeName">
 						<option value=""></option>
 					</select>
 					<input class="savedata" type="hidden" value=''>
@@ -44,9 +31,9 @@
 				<font>*</font>
 			</div>
 			<div class="mui-input-row">
-				<label>采购中心：</label>
+				<label>客户专员：</label>
 				<div class="pre">
-					<select class="secStyle" name="" id="input_div_business">
+					<select class="secStyle" name="" id="cosultasName">
 						<option value=""></option>
 					</select>
 					<input class="savedata" type="hidden" value=''>
@@ -55,15 +42,10 @@
 				<font>*</font>
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
-				<label class="commodityName">经销店名称：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="staRelAddMobeil" placeholder="请输入手机号查询">
-				<button id="staRelAddSehBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
-			</div>
-			<!--<div class="mui-input-row">
-				<label>手机号：</label>
-				<input type="text" class="mui-input-clear" id="phoneNum" placeholder="请输入手机号码">
+				<label class="commodityName">登录名：</label>
+				<input type="text" class="mui-input-clear commodityTxt" id="" placeholder="请输入">
 				<font>*</font>
-			</div>-->
+			</div>
 		</div>
 		<div class="SearchBtnClass">
 			<button id="staRelSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
