--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -63,14 +63,15 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
-			<!--<input class="savedata" type="text" value='' id="consultantsid" name="consultantsid">-->
 			<div class="listBlue mui-scroll">
 				<ul class="mui-table-view mui-table-view-chevron" id="staReleList">
-                        
+					
                 </ul>
 			</div>
 		</div>
-		
+		<input type="hidden" name="consultantsId" id="consultantsId" />
+		<input type="hidden" name="cosultasId" id="cosultasId" />
+		<input type="hidden" name="officeId" id="officeId" />
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
