--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -70,6 +70,7 @@
 		<input type="hidden" name="statu" id="statu"/>
 		<input type="hidden" name="source" id="source"/>
 		<input type="text" name="consultantId" id="consultantId"/>
+		<input type="text" name="consultantIda" id="consultantIda"/>
 		<input type="hidden" name="flag" id="flag"/>
 		<input type="hidden" name="staListIdTxt" id="staListIdTxt"/>
 		<script src="../../../js/component/mui.min.js"></script>	
