--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -50,6 +50,10 @@
 		<div class="SearchBtnClass">
 			<button id="staRelSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
+		
+		<input type="hidden" name="centersId" id="centersId"/>
+		<input type="hidden" name="consultantsId" id="consultantsId"/>
+		
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
