--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -43,11 +43,11 @@
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
 				<label class="commodityName">登录名：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="" placeholder="请输入">
+				<input type="text" class="mui-input-clear commodityTxt" id="phpneId" placeholder="请输入">
 				<font>*</font>
 			</div>
 		</div>
-		<div class="SearchBtnClass">
+		<div class="SearchBtnClass staRelSave">
 			<button id="staRelSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		
