添加业务状态和发票状态

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -10,10 +10,9 @@
 		<style type="text/css">
 			.mui-content div.content_part li {padding: 0;list-style: none;}
 			.mui-content div.ctn_li_h li {height: 30px;}
-			.mui-input-row label {padding: 14px 14px;}
-			.commodity {font-size: 13px;}
-			.commodity div.mui-input-row>input {padding: 0;font-size: 13px;}
-			.commodity div.mui-input-row>label {padding: 0;}
+			.commoditys {font-size: 13px;}
+			.commoditys div.mui-input-row>input {padding: 0;font-size: 13px;}
+			.commoditys div.mui-input-row>label {padding: 0;}
 			.photoParent {width: 15%;height: 220px;margin-right: 15px;}
 			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
 			.listBlue>li {border-bottom: 1px solid #40ABE9;}
