--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -40,9 +40,10 @@
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;}
  			.app_font_cl{text-align: center;}
- 			#refreshContainer{
+ 			#refreshContainer,.staRelStaBtn{
 				touch-action: none;
 			}
+			
 			.mui-ios .mui-table-view-cell {padding: 0;}
 		</style>
 	</head>
