订单详情业务状态及备货单备货商品的修改

--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -65,7 +65,8 @@
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
-				<input type="text" class="mui-input-clear" id="staStatus" disabled>
+				<input type="text" class="mui-input-clear doubleInput app_cred3" id="staFinal" disabled>
+				<input type="text" class="mui-input-clear doubleInput" id="staStatus" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>收货人：</label>
