--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -128,6 +128,7 @@
 				color:#40ABE9;
 			}
 			.mui-btn-blue, .mui-btn-primary, input[type=submit] {background-color: #40ABE9;border: none;}
+			.mui-input-row select {height: 31px;font-size: 15px}
 		</style>
 	</head>
 
