--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -76,7 +76,9 @@
 		    	<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">
 		        	采购中心备货
 		        	<input checked type="radio" name="apply" />
-	                                厂商备货
+	        	</div>
+		        <div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">	
+                    厂商备货
 	                <input id="yes" type="radio" name="apply" />
 		    	</div>
 		    </div>
