--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -14,8 +14,8 @@
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 			<h1 class="mui-title">运营管理</h1>
 		</header>
-		<div class="mui-content">
-			<div class="mui-card">
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-card mui-scroll" style="margin:0px;">
 				<ul class="mui-table-view app_color40" id="menuMaget">
 
 				</ul>
