--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -104,10 +104,12 @@
 			<div class="mui-input-row" id="orderTypebox">
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
-		        	产地直发
 			        <input checked type="radio" name="localOriginType" value="0" />
-			                本地备货
+		        	产地直发
+	        	</div>
+	        	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
 	                <input id="yes" type="radio" name="localOriginType" value="1" />
+                	本地备货
 		    	</div>
 		    </div>
 			<div class="mui-input-row staCommodity">
