--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -18,7 +18,7 @@
 				list-style: none;
 				height: 30px;
 			}
-			.mui-input-row label~input {width: 60%;}
+			/*#staFinal {color:#E45038 !important;}*/
 		</style>
 	</head>
 	<body>
