--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -23,6 +23,11 @@
 			.mui-table-view-chevron .mui-table-view-cell {
 			     padding-right: 0px; 
 			}
+		#refreshContainer .hide {
+		    visibility: visible!important;   
+		    /*display: none!important;*/    
+          } 
+
 		</style>
 	</head>
 	<body>
