--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -7,9 +7,6 @@
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
-			.photoParent {width: 15%;height: 220px;margin-right: 15px;}
-			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
-			#staEvoMenu>li:last-child {color: #40ABE9;}
 			.mui-table-view-cell {
 				border-bottom: 1px solid #efeff4;
 			}
@@ -18,7 +15,6 @@
 				list-style: none;
 				height: 30px;
 			}
-			/*#staFinal {color:#E45038 !important;}*/
 		</style>
 	</head>
 	<body>
@@ -110,7 +106,7 @@
 			</div>-->
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
-				<ul class="" id="staEvoMenu">
+				<ul class="flowPath" id="staEvoMenu">
 					
 				</ul>
 			</div>
