--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -13,10 +13,6 @@
 			.commoditys {font-size: 13px;}
 			.commoditys div.mui-input-row>input {padding: 0;font-size: 13px;}
 			.commoditys div.mui-input-row>label {padding: 0;}
-			.photoParent {width: 15%;height: 220px;margin-right: 15px;}
-			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
-			.listBlue>li {border-bottom: 1px solid #40ABE9;}
-			#inCheckAddMenu>li:last-child {color: #40ABE9;}
 		</style>
 	</head>
 	<body>
@@ -51,7 +47,7 @@
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">备货商品：</div>
-				<ul id="commodityMenu" class="listBlue mui-table-view">
+				<ul id="commodityMenu" class="mui-table-view">
 					
 				</ul>
 			</div>
@@ -66,7 +62,7 @@
 			<!--审批流程块 有的话显示-->
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
-				<ul class="" id="inCheckAddMenu">
+				<ul class="flowPath" id="inCheckAddMenu">
 					
 				</ul>
 			</div>
