--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -73,11 +73,12 @@
 		    	<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">
 		        	<input checked type="radio" name="apply" />
 		        	采购中心备货
-	        	</div>
-		        <div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">	
-                	<input id="yes" type="radio" name="apply" />    
+		        	<input id="yes" type="radio" name="apply" />    
             		厂商备货
-		    	</div>
+	        	</div>
+		        <!--<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">	
+                	
+		    	</div>-->
 		    </div>
 			<div class="mui-input-row">
 				<label>采购中心：</label>
