--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -100,18 +100,6 @@
 					
 				</ul>
 			</div>
-			
-			<div class="mui-input-row" id="orderTypebox">
-				<label>供货方式：</label>
-		    	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
-			        <input checked type="radio" name="localOriginType" value="0" />
-		        	产地直发
-	        	</div>
-	        	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
-	                <input id="yes" type="radio" name="localOriginType" value="1" />
-                	本地备货
-		    	</div>
-		    </div>
 			<div class="mui-input-row staCommodity">
 				<div class="labelLf">商品信息：</div>
 				<ul id="staCheckCommodity" class="mui-table-view app_pl10">
@@ -129,6 +117,15 @@
 					<input type="text" class="mui-input-clear" id="staPayMoney" disabled>
 				</div>
 			</div>
+			<div class="mui-input-row" id="orderTypebox">
+				<label>供货方式：</label>
+		    	<div id="changeTxt" class="labelri">
+			        <input checked type="radio" name="localOriginType" value="0" />
+		        	产地直发
+		        	 <input id="yes" type="radio" name="localOriginType" value="1" />
+                	本地备货
+	        	</div>
+		    </div>
 			<div class="app_cred3">
 				<div class="mui-row app_bline">
 					<div class="mui-input-row">
