--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -7,10 +7,7 @@
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
-			.mui-input-row .mui-input-clear~.mui-icon-clear {
-				right: 4.5em;
-    			top: 10px;
-			}
+			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4.5em;top: 10px;}
 		</style>
 	</head>
 	<body>
