--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -71,9 +71,9 @@
 			<div class="mui-input-row">
 				<label>备货方：</label>
 		    	<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">
-		        	<input checked type="radio" name="apply" />
+		        	<input checked type="radio" name="apply" class="inputRadio"/>
 		        	采购中心备货
-		        	<input id="yes" type="radio" name="apply" />    
+		        	<input id="yes" type="radio" name="apply" class="inputRadio" />    
             		厂商备货
 	        	</div>
 		        <!--<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">	
