--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -17,7 +17,6 @@
 			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
 			.listBlue>li {border-bottom: 1px solid #40ABE9;}
 			#staEvoMenu>li:last-child {color: #40ABE9;}
-			.mui-input-row label~input {width: 60%;}
 			.mui-table-view-cell {
 				border-bottom: 1px solid #efeff4;
 			}
@@ -120,9 +119,9 @@
 			<div class="mui-input-row" id="orderTypebox">
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
-			        <input checked type="radio" name="localOriginType" value="0" />
+			        <input checked type="radio" name="localOriginType" value="0" class="inputRadio"/>
 		        	产地直发
-		        	 <input id="yes" type="radio" name="localOriginType" value="1" />
+		        	 <input id="yes" type="radio" name="localOriginType" value="1"  class="inputRadio"/>
                 	本地备货
 	        	</div>
 		    </div>
