--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -1,6 +1,5 @@
-<!--<!DOCTYPE html>-->
+<!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, user-scalable=0, minimal-ui" charset="UTF-8">
@@ -10,54 +9,7 @@
 		<title>采购单管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
-		<link href="../../css/drop.css" rel="stylesheet" />
-    	<style type="text/css">
-			* {
-				margin: 0;
-				padding: 0;
-				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-				-webkit-text-size-adjust: none;
-			}
-			html {
-				font-size: 10px;
-			}
-			body {
-				background-color: #fff;
-			}
-			.header {
-				height: 44px;
-				line-height: 44px;
-				border-bottom: 1px solid #ccc;
-				background-color: #40ABE9;
-			}
-			.content {
-				padding-bottom: 40px;
-				background-color: #fff;
-			}
-			.dropload-down{display: none;}		    
-			.dropload-refresh{
-				background: red;
-				width:100%;
-				text-align: center;
-			}
-			.mui-content div.content_part li {padding: 0;list-style: none;height: 30px;}
- 			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
- 			.mui-table-view:before {background-color: #FFF;}
- 			.mui-input-group div.mui-input-row {background-color:#fff;}
- 			.selectStyle {margin-bottom: 0;}
- 			.menuMarg {margin: 0 2px;border-radius:5px;}
- 			#searchBtn {background-color: #374761;padding: 30px;}
- 			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
- 			.footClass {background-color: #40ABE9;} 
- 			#refreshContainer{
-				touch-action: none;
-			}  
-			.mui-table-view-chevron .mui-table-view-cell {
-			     padding-right: 0px; 
-			}
-		</style>
 	</head>
-
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
@@ -71,7 +23,7 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
-			<div class="listBlue mui-scroll" id="addBtn">
+			<div class="mui-scroll" id="addBtn">
 				<ul class="mui-table-view mui-table-view-chevron" id="list">
                         
                 </ul>
@@ -80,9 +32,6 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/component/dropload.js"></script>
 		<script src="../../js/custom/purchase.js"></script>
-
 	</body>
-
 </html>
