--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -6,26 +6,6 @@
 		<title>订单审核</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../../css/app.css" rel="stylesheet" />
-		<style type="text/css">
-			.mui-content div.content_part li {padding: 0;list-style: none;}
-			.mui-content div.ctn_li_h li {height: 30px;}
-			.sucessColor {color: #40ABE9;}
-			.commodity {font-size: 13px;}
-			.commodity div.mui-input-row>input {padding: 0;font-size: 13px;}
-			.commodity div.mui-input-row>label {padding: 0;}
-			.photoParent {width: 15%;height: 220px;margin-right: 15px;}
-			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
-			.listBlue>li {border-bottom: 1px solid #40ABE9;}
-			#staEvoMenu>li:last-child {color: #40ABE9;}
-			.mui-table-view-cell {
-				border-bottom: 1px solid #efeff4;
-			}
-			.mui-content div.mui-row li {
-				padding: 5px;
-				list-style: none;
-				height: 30px;
-			}
-		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -95,7 +75,7 @@
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
-				<ul class="" id="staStatusMenu">
+				<ul class="flowPath" id="staStatusMenu">
 					
 				</ul>
 			</div>
@@ -116,13 +96,13 @@
 					<input type="text" class="mui-input-clear" id="staPayMoney" disabled>
 				</div>
 			</div>
-			<div class="mui-input-row" id="orderTypebox">
+			<div class="mui-input-row app_bline" id="orderTypebox">
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
+		    		本地备货
 			        <input checked type="radio" name="localOriginType" value="0" class="inputRadio"/>
 		        	产地直发
 		        	 <input id="yes" type="radio" name="localOriginType" value="1"  class="inputRadio"/>
-                	本地备货
 	        	</div>
 		    </div>
 			<div class="app_cred3">
