添加 测试数据查询功能

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -7,18 +7,9 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
-			.mui-action-back{
-				touch-action: none;
-			}
-			.addBtn {
-				width: 30%;
-				margin: 5px auto;
-			}
 			
-			.saveBtn {
-			    width: 70%;
-				margin: 20px auto;
-			}
+			
+			
 			
 			.addBtnClass {
 				padding: 0;
@@ -143,7 +134,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="saveBtn inSaveBtn">
+		<div class="inSaveBtn">
 			<button id="inSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<div class="clear"></div>
