--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -101,7 +101,8 @@
 				</ul>
 			</div>
 			<div class="mui-input-row">
-				<div class="labelLf">状态流程：</div>
+				<div class="labelLf">
+					审核流程：</div>
 				<ul class="" id="staStatusMenu">
 					
 				</ul>
