--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -45,6 +45,16 @@
 					</div>
 				</div>
 				<div class="mui-input-row">
+					<label>审核状态：</label>
+					<div class="pre">
+						<select class="secStyle" name="" id="input_div_check">
+							<option value=""></option>
+						</select>
+						<input class="savedata" type="hidden" value=''>
+						<div style="clear:both"></div>
+					</div>
+				</div>
+				<div class="mui-input-row">
 					<label>品类名称：</label>
 					<div class="pre">
 						<select class="secStyle" name="" id="input_div_class">
