--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -64,6 +64,10 @@
 						<div style="clear:both"></div>
 					</div>
 				</div>
+				<div class="mui-input-row">
+					<label>测试数据：</label>
+					<input type="checkbox" name="" id="" value="" class="testCheckbox"/>
+				</div>
 			</form>
 		</div>
 		<div class="SearchBtnClass">
