--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -10,9 +10,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
     	<style type="text/css">
- 			#refreshContainer{
-				touch-action: none;
-			}  
+ 			#refreshContainer{touch-action: none;}  
 		</style>
 	</head>
 	<body>
