--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -7,50 +7,8 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
-			
-			
-			
-			
-			.addBtnClass {
-				padding: 0;
-				font-size: 15px;
-			}
-			
-			.mui-content div.mui-row li {
-				padding: 5px;
-				list-style: none;
-				height: 30px;
-			}
-			
-			.secStyle {
-				margin: 5px 0;
-			}
-
-			.inputClassAdd {
-				font-size: 10px;
-			}
-
-			.inputClassAdd>label {
-				padding: 0;
-			}
-
-			.inputClassAdd>input {
-				padding: 0;
-				font-size: 10px;
-			}
-			.mui-table-view-cell {
-				border-bottom: 1px solid #efeff4;
-			}
-			
-			.mui-input-row .mui-input-clear~.mui-icon-clear {
-				right: 4.5em;
-    			top: 4px;
-			}
-			.inputClassAdd font {
-			    right: 5px;
-			    top: 10%;
-			}
-			.mui-btn-blue, .mui-btn-primary, input[type=submit] {background-color: #40ABE9;border: none;}
+			.labelri {font-size: 14px;}
+			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4em;}
 		</style>
 	</head>
 	<body>
@@ -107,7 +65,7 @@
 				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入商品货号">
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
-			<div class="mui-row app_bline2" id="searchInfo">
+			<div class="mui-row app_bline2 inComdty inAddComdty" id="searchInfo">
 
 			</div>
 
@@ -115,7 +73,7 @@
 				<div class="labelLf">备货商品：</div>
 			</div>
 
-			<div class="mui-row app_bline2" id="commodityMenu">
+			<div class="mui-row app_bline2 inComdty inAddComdty" id="commodityMenu">
 
 			</div>
 
