--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -8,11 +7,8 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
-			.mui-content div.content_part li {padding: 0;list-style: none;}
-			.mui-content div.ctn_li_h li {height: 30px;}
-			.commoditys {font-size: 13px;}
-			.commoditys div.mui-input-row>input {padding: 0;font-size: 13px;}
-			.commoditys div.mui-input-row>label {padding: 0;}
+			.mui-input-group .mui-input-row:after {left: 0px;}
+			.mui-table-view-cell {padding: 0 15px;}
 		</style>
 	</head>
 	<body>
@@ -45,7 +41,7 @@
 				<label>收货时间：</label>
 				<input type="text" class="mui-input-clear" id="inPoLastDa" disabled>
 			</div>
-			<div class="mui-input-row">
+			<div class="mui-input-row inComdty inDetailComdty">
 				<div class="labelLf">备货商品：</div>
 				<ul id="commodityMenu" class="mui-table-view">
 					
@@ -66,14 +62,11 @@
 					
 				</ul>
 			</div>
-			
 		</div>
 		<div class="clear"></div>
-
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
 		<script src="../../js/inventoryMagmetJs/inventoryDetails.js"></script>
 	</body>
-
 </html>
