--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/applyPay.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/applyPay.html
@@ -7,13 +7,8 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
     	<style type="text/css">
- 			.mui-content div.content_part li {padding: 0;list-style: none;}
-			.mui-content div.ctn_li_h li {height: 30px;}
-			.mui-input-row label {padding: 14px 14px;}
 			#nowDate {text-indent: 10px;}
 			#applyPayBtnSubmit {left: 50%;margin-left: -41px;}
-			.sucessColor {color: #40ABE9;}
-			.mui-input-row font {color: red;position: absolute;right: 60px;top: 30%;}
 		</style>
 	</head>
 	<body>
@@ -81,7 +76,7 @@
 			        <font>*</font>
 			    </div>
 			    <div class="mui-input-row">
-			        <label>本次申请付款时间：</label>
+			        <label>申请付款时间：</label>
 			        <input id="nowDate" type="date" name="" />
 			        <font>*</font>
 			    </div>
