--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="mui-input-row">
 					<label>支付金额：</label>
-					<input id="inPayNum" type="text" class="detaNum" placeholder="请输入金额">
+					<input id="inPayNum" type="text" class="mui-input-clear detaNum" placeholder="请输入金额">
 					<font>*</font>
 				</div>
 			</div>
