--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>收货时间：</label>
-				<input type="date" class="mui-input-clear" id="inPoLastDa">
+				<input type="date" class="" id="inPoLastDa">
 				<font>*</font>
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
