--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -47,7 +47,7 @@
 				<input type="text" class="mui-input-clear" id="inMarginLevel" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>已支付厂商保证金：</label>
+				<label>已支付保证金：</label>
 				<input type="text" class="mui-input-clear" id="inMoneyPay" disabled>
 			</div>
 			<div class="mui-input-row">
@@ -80,7 +80,7 @@
 				<label>排产类型：</label>
 				<input type="text" id="inSchedultype" class="mui-input-clear" disabled>
 			</div>
-			<div class="mui-input-row">
+			<div class="mui-input-row inComdty inDetailComdty">
 				<div class="labelLf">采购商品：</div>
 				<ul id="purchaseMenu" class="mui-table-view">
 					
