--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -16,11 +16,11 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>备货单号：</label>
-					<input type="text" class="inOrdNum" placeholder="请输入备货单号">
+					<input type="text" class="mui-input-clear inOrdNum" placeholder="请输入备货单号">
 				</div>
 				<div class="mui-input-row">
 					<label>供应商：</label>
-					<input type="text" class="inReqNum" placeholder="请输入供应商">
+					<input type="text" class="mui-input-clear inReqNum" placeholder="请输入供应商">
 				</div>
 				<div class="mui-input-row">
 					<label>采购中心：</label>
