状态流程修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -93,6 +93,12 @@
 					
 				</ul>
 			</div>
+			<div class="mui-input-row">
+				<div class="labelLf">审批流程：</div>
+				<ul class="flowPath" id="inapprovalAddMenu">
+					
+				</ul>
+			</div>
 		</div>
 		<div class="clear"></div>
 		<script src="../../js/component/mui.min.js"></script>
