--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -6,6 +6,9 @@
 		<title>订单审核</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../../css/app.css" rel="stylesheet" />
+		<style type="text/css">
+			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4em;}
+		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -28,6 +31,7 @@
 			<div class="mui-input-row">
 				<label>调整金额：</label>
 				<input type="text" class="mui-input-clear" id="staAdjustmentMoney">
+				<button id="changePriceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">修改</button>
 			</div>
 			<div class="mui-input-row">
 				<label>运费：</label>
