--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -55,7 +55,8 @@
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
-				<input type="text" id="staStatus" class="mui-input-clear" disabled>
+				<input type="text" class="mui-input-clear doubleInput app_cred3" id="staFinal" disabled>
+				<input type="text" id="staStatus" class="mui-input-clear doubleInput" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>收货人：</label>
@@ -104,9 +105,9 @@
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
 		    		本地备货
-			        <input checked type="radio" name="localOriginType" value="0" class="inputRadio"/>
+			        <input checked type="radio" name="localOriginType" value="1" class="inputRadio"/>
 		        	产地直发
-		        	 <input id="yes" type="radio" name="localOriginType" value="1"  class="inputRadio"/>
+		        	<input id="yes" type="radio" name="localOriginType" value="0"  class="inputRadio"/>
 	        	</div>
 		    </div>
 			<div class="app_cred3">
