--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -34,6 +34,10 @@
 				<button id="changePriceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">修改</button>
 			</div>
 			<div class="mui-input-row">
+				<label>增值服务费：</label>
+				<input type="text" class="mui-input-clear" id="staAddprice">
+			</div>
+			<div class="mui-input-row">
 				<label>运费：</label>
 				<input type="text" class="mui-input-clear" id="staFreight" disabled>
 			</div>
@@ -48,6 +52,10 @@
 			<div class="mui-input-row">
 				<label>服务费：</label>
 				<input type="text" id="staServerPrice" class="mui-input-clear" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" class="mui-input-clear" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>发票状态：</label>
@@ -90,7 +98,7 @@
 					
 				</ul>
 			</div>
-			<div class="mui-input-row app_bline">
+			<!--<div class="mui-input-row app_bline">
 				<div class="labelLf">付款约定：</div>
 				<div class="mui-input-row">
 					<label>付款时间：</label>
@@ -100,7 +108,7 @@
 					<label>金额：</label>
 					<input type="text" class="mui-input-clear" id="staPayMoney" disabled>
 				</div>
-			</div>
+			</div>-->
 			<div class="mui-input-row app_bline" id="orderTypebox">
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
