--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -30,6 +30,10 @@
 				<input type="text" class="mui-input-clear" id="staAdjustmentMoney" disabled>
 			</div>
 			<div class="mui-input-row">
+				<label>增值服务费：</label>
+				<input type="text" class="mui-input-clear" id="staAddprice">
+			</div>
+			<div class="mui-input-row">
 				<label>运费：</label>
 				<input type="text" class="mui-input-clear" id="staFreight" disabled>
 			</div>
@@ -44,6 +48,10 @@
 			<div class="mui-input-row">
 				<label>服务费：</label>
 				<input type="text" class="mui-input-clear" id="staServerPrice" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" class="mui-input-clear" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>发票状态：</label>
@@ -112,7 +120,7 @@
 					
 				</ul>
 			</div>
-			<div class="mui-input-row app_bline">
+			<!--<div class="mui-input-row app_bline">
 				<div class="labelLf">付款约定：</div>
 				<div class="mui-input-row">
 					<label>付款时间：</label>
@@ -122,7 +130,7 @@
 					<label>金额：</label>
 					<input type="text" class="mui-input-clear" id="staPayMoney" disabled>
 				</div>
-			</div>
+			</div>-->
 			<div class="app_cred3">
 				<div class="mui-row app_bline">
 					<div class="mui-input-row">
